--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </section>
         <section class="section">
             <div class="live-donate">
-                <div>
+                <div class="donate-item">
                     <h3 class="donate-title-live">Their lives depend on your donation</h3>
                     <p class="donate-live-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
                     <p class="donate-live-description1">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.</p>
@@ -83,10 +83,10 @@
         <section class="section">
             <div class="live-donate">
                 <div class="live-donate-img">
-                    <img src="images/donation0.jpg" alt="">
+                    <img src="images/donation7.jpg" alt="">
                 </div>
-                <div>
-                    <h3 class="donate-title-live">Their lives depend on your donation</h3>
+                <div class="donate-item">
+                    <h3 class="donate-title-live">They need us to suvive</h3>
                     <p class="donate-live-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
                     <p class="donate-live-description1">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.</p>
                     
@@ -95,6 +95,18 @@
                 </div>
                 
             </div>
+        </section>
+
+        <section class="donate">
+            <h1 class="donate-title">Get My Updates</h1>
+            <p class="donate-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+                deterruisset. No duo populo animal noluisse, enim</p>
+                <div class="contact">
+                    <form action="#">
+                        <input type="email" placeholder="Email">
+                        <button class="btn-primary" type="submit">Subscribe</button>
+                    </form>
+                </div>
         </section>
 
     </main>
