--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Donate App</title>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Open+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Lobster&family=Open+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header class="header">
@@ -102,13 +104,22 @@
             <p class="donate-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
                 deterruisset. No duo populo animal noluisse, enim</p>
                 <div class="contact">
-                    <form action="#">
-                        <input type="email" placeholder="Email">
-                        <button class="btn-primary" type="submit">Subscribe</button>
-                    </form>
+                    <div>
+                        <form action="">
+                            <label for="#">
+                                <input class="input-email" type="email" placeholder="Email">
+                                <input class="btn-primary-submit" type="submit" value="Subscribe">
+                            </label>
+                        </form>
+                    </div>
                 </div>
         </section>
-
     </main>
+    <footer class="footer">
+        <div class="footer-section">
+            <h2 class="footer-title">Be Humble</h2>
+            <small class="donate-description">I’m gonna do it</small>
+        </div>
+    </footer>
 </body>
 </html>
